# Elan_vim

./: README.md  antigen.zsh  bashrc  bashrc.expand  bashrc.function  bashrc_expand  bashrc_function  cheat  gitconfig  install.sh  oh_my_zsh_install.sh  p10k.zsh  screenrc  tmux.conf  vimrc  zshrc  zshrc.expand  zshrc.function
_template/: Title.makefile  Title.sh  cppHeaderLib  cppHeaderMain
_template/c++/cmake/: CMakeLists.txt
_template/c++/src/: main.cpp
cheat/: GoOn  TODO  apue  atomic  bash  bazel  c++  fsdb  gdb  golang  nginx  samba  setup.sh  sles15  socket
